# rp2040-hub75

./: .gitignore  .gitmodules  CMakeLists.txt  Notes.md  README
arduino/: CMakeLists.txt  Neodgm.h  Panel.cpp  Panel.h  arduino.ino  pincfg.h
hardware/: fp-info-cache  skku-bus.kicad_pcb  skku-bus.kicad_prl  skku-bus.kicad_pro  skku-bus.kicad_sch  ~skku-bus.kicad_pcb.lck
hardware/bom/: ibom.html
hardware/gerber/: skku-bus-B_Cu.gbr  skku-bus-B_Mask.gbr  skku-bus-B_Paste.gbr  skku-bus-B_Silkscreen.gbr  skku-bus-Edge_Cuts.gbr  skku-bus-F_Cu.gbr  skku-bus-F_Mask.gbr  skku-bus-F_Paste.gbr  skku-bus-F_Silkscreen.gbr  skku-bus-NPTH.drl  skku-bus-PTH.drl  skku-bus-job.gbrjob
include/: Panel.h  mountains.h
src/: CmakeLists.txt  Neodgm.h  Panel.cpp  Panel.h  WiFi.h  Wifi.cpp  flash.h  hub75.h  hub75.pio  main.cpp  pincfg.h
src/html/: CMakeLists.txt  html.hpp
src/hub75/: CMakeLists.txt  Panel.cpp  Panel.h  VirtualPanel.h  hub75.cpp  hub75.h  hub75.pio  i2s.cpp  i2s.h
src/wifinina/: CMakeLists.txt  WiFi.cpp  WiFi.h  WiFiClient.h  WiFiServer.h
src/wifinina/arduino/: Arduino.h  CMakeLists.txt  Client.h  Common.h  IPAddress.cpp  IPAddress.h  Print.cpp  Print.h  Serial.cpp  Serial.h  Stream.cpp  Stream.h
src/wifinina/utility/: CMakeLists.txt  spi_drv.cpp  wifi_drv.h
tests/: 3bit-row-rand.cpp  3bit-row-static.cpp  3bit-serial.cpp
